# hilton

./: README.md
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: buf_display.rs  canvas.rs  hilton.rs  lcd.rs  main.rs  panic.rs
firmware/src/canvas/: blit.rs  color.rs  draw.rs  vec2.rs
firmware/src/canvas/draw/: bitmap.rs  circle.rs  pixel.rs  rect.rs
firmware/src/lcd/: buffered.rs  builder.rs  commands.rs
firmware/src/lcd/buffered/: chunk.rs
simulator/: Cargo.toml
simulator/src/: ioctl.rs  lcd.rs  led.rs  lib.rs  main.rs  pins.rs
