[package]
name = "hilton"
version = "0.1.0"
authors = ["Karol Belina <karolbelina@gmail.com>"]
edition = "2021"

[[bin]]
name = "hilton"
test = false
bench = false

[dependencies]
atmega-hal = { git = "https://github.com/Rahix/avr-hal", features = ["atmega328p", "rt"] }
avr-hal-generic = { git = "https://github.com/Rahix/avr-hal" }
embedded-hal = "0.2.3"
nb = "0.1.2"
panic-halt = "0.2.0"
ufmt = "0.1.0"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[package.metadata.cargo_avrdude]
args = ["-p", "m328p", "-c", "usbasp", "-e", "-V", "-U", "flash:w:{}"]
